# sysrepo

./: CNC_xml_payload.xml
examples/plugins/: CMakeLists.txt  dect-cuc.cpp  dect_ule_tsn.c  tsn-cuc-dect.hpp
swig/cpp/examples/: CMakeLists.txt  shmem.cpp  tsn-cuc-dect.cpp  tsn-cuc-tests.cpp
yang/: tree.txt  tsn-cuc-dect.yang
